# PythonLLMClient

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
llm/: __init__.py  exceptions.py  llama_swap.py  llm.py  llm_client.py  message.py  ollama.py  openai.py  options.py  tools.py  trace.py
tests/: test_get_models.py  test_llm_embeddings.py  test_llm_factory.py  test_llm_options.py  test_llm_tools_streaming.py
tests/integrations/: test_llm_integrations.py  test_llm_streaming.py  test_llm_thinking.py  test_llm_tools.py  test_llm_tools_pydantic.py  test_llm_tools_response_format.py  test_llm_tools_streaming.py
