[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "0.1.0"
description = "Async Python client library for LLM APIs (Ollama, OpenAI, llama-swap)"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "serge" },
]
dependencies = [
    "aiohttp>=3.9",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["llm*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
